--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@ layout: main
 {% else %}
 {% endif %}
 
+{% if post.tags3 %}
+  <h2>Dataset</h2>
+{% else %}
+{% endif %}
+
 {% endfor %}
 {% include pagination.html %}
